[project]
name = "epypen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic",
    "typing-extensions>=4.12.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.6.1",
]

[tool.uv]
managed = false

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
